# libyara-wasm

./: .gitignore  .npmignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  YaraCC.cpp  YaraCC.h  YaraCC.hpp  index.html  main.cpp  package-lock.json  package.json  util.cpp  util.hpp
.github/workflows/: build-and-deploy.yml
test/: CMakeLists.txt  YaraCC.test.cpp
test/CMake/: FetchCatch2.cmake  FindYara.cmake
